File Name: CHANGES

03/25/2018 FASP 2.0.9:
- Update Fortran wrappers: add a new one.

03/24/2018 FASP 2.0.8:
- Remove unused arguments in several functions.
- Remove unused OMP counter from fasp.h.
- Change interger definitions of a few local variables.
- Update function decrorations in fasp_functs.h.
- Get rid of all clock().
- Check CPU time output again.
- Update regression results.
- Fixan OMP bug; find another.
- Add VS15 solution.

03/15/2018 FASP 2.0.7:
- Update copyright information.
- Fix some ANSI C uncompatible problems; a lot more still there.
- Update VS10 setting: set FP model to '/precise' in order to get same results in Windows.
- Locate the parameter difference in OpenMP version.
- Move definition ILU_MC_OMP from fasp_const.h to fasp.h.
- Modify README: MS VC compiler does not work for our C code if we do not change .c to .cpp.

03/09/2018 FASP 2.0.6:
- Fix a bug in fasp_mem_free. Set all memory pointers to NULL by hand.
- Update documentation and fasp webpage.
- Update VS10 settings for OMP version in Windows 7.
- Try to remove unused parts in OMP and look for bugs causing divergence.
- Update the diagonally dominant check function.
- Modify the ordering of default direct solvers.

01/04/2018 FASP 2.0.5:
- Try to unify itsolver and itsolver_s. 
- Add regression tests for itsolver_s (iterative methods with safe-net).
- Update regression test results.
- New TODO list.
- Update user's guide for the recent changes.
- Update webpage documentation zip file.
- Update fasp webpage.

10/21/2017 FASP 2.0.4:
- Format WARNING messages for all functions.
- Format ERROR messages for all functions.
- Format DEBUG messages for all functions.
- Fix several TODO's listed in the functions.
- Get rid of ALL warnings in DEBUG mode.
- Replace Direct with Pardiso; Direct.lib is NOT used any more on Windows.
- Update CMakeFile Policy for OpenMP and clean up.
- Update regression results for MM and MF; new version is better.
- Update TODO list.

09/24/2017 FASP 2.0.3: